# oop-project

./: .gitignore  CMakeLists.txt  README.md
docs/: Project_Report.docx  Project_Report.md  build_report.py
planning/: 01-architecture.md  02-folder-structure.md  03-class-design.md  04-oop-map.md  05-uml-diagrams.md  06-use-case-diagrams.md  07-data-flow.md  08-file-schemas.md  09-gui-wireframes.md  10-roadmap.md
presentation/: RestaurantPOS_Demo.pptx  build_deck.py
src/: App.cpp  App.h  main.cpp
src/domain/analytics/: AnalyticsService.cpp  AnalyticsService.h  Report.cpp  Report.h  SalesHistoryRepository.cpp  SalesHistoryRepository.h  SalesRecord.h
src/domain/auth/: Admin.h  AuthService.cpp  AuthService.h  Cashier.h  Kitchen.h  PasswordHash.cpp  PasswordHash.h  Session.cpp  Session.h  User.cpp  User.h  UserRepository.cpp  UserRepository.h
src/domain/billing/: BillingService.cpp  BillingService.h  PaymentMethod.h  PdfExporter.cpp  PdfExporter.h  Receipt.cpp  Receipt.h  ReceiptRepository.cpp  ReceiptRepository.h
src/domain/common/: Capability.h  DateTime.cpp  DateTime.h  Exceptions.h  Id.h  Money.cpp  Money.h  Result.h
src/domain/customer/: Customer.cpp  Customer.h  CustomerRepository.cpp  CustomerRepository.h  CustomerService.cpp  CustomerService.h  LoyaltyRepository.cpp  LoyaltyRepository.h  LoyaltyRule.cpp  LoyaltyRule.h
src/domain/inventory/: Ingredient.cpp  Ingredient.h  InventoryRepository.cpp  InventoryRepository.h  InventoryService.cpp  InventoryService.h  Recipe.h  RecipeRepository.cpp  RecipeRepository.h
src/domain/kitchen/: KitchenService.cpp  KitchenService.h  KitchenTicket.cpp  KitchenTicket.h
src/domain/menu/: Category.h  MenuItem.cpp  MenuItem.h  MenuRepository.cpp  MenuRepository.h  MenuService.cpp  MenuService.h
src/domain/order/: Order.cpp  Order.h  OrderItem.cpp  OrderItem.h  OrderRepository.cpp  OrderRepository.h  OrderService.cpp  OrderService.h  OrderStatus.h
src/domain/persistence/: BinaryRepository.h  FilePaths.h  SettingsRepository.cpp  SettingsRepository.h  TextRepository.cpp  TextRepository.h
src/domain/tables/: Table.cpp  Table.h  TableRepository.cpp  TableRepository.h  TableService.cpp  TableService.h  TableStatus.h
src/platform/: ImGuiBackend.cpp  ImGuiBackend.h  InputBridge.cpp  InputBridge.h  KeyMap.cpp  KeyMap.h  Platform.cpp  Platform.h
src/ui/: AppContext.h  Router.cpp  Router.h  Shell.cpp  Shell.h
src/ui/anim/: Animation.cpp  Animation.h
src/ui/screens/: AnalyticsScreen.cpp  BillingScreen.cpp  DashboardScreen.cpp  InventoryScreen.cpp  KitchenScreen.cpp  LoginScreen.cpp  MenuScreen.cpp  OrderScreen.cpp  Screens.h  SplashScreen.cpp  TablesScreen.cpp
src/util/: Files.cpp  Files.h  Log.cpp  Log.h  Random.h  Strings.cpp  Strings.h
tools/: preflight_check.ps1
tools/probes/: hash_probe.cpp  login_probe.cpp  sfml_probe.cpp
(+18 files in other folders)
